# pixelart

./: .gitignore  README.md
Assets/Data/: coin.json  enemy.json  enemy3.json  sphere.json  test.json
Assets/LeanTween/Examples/Scenes/: Following.unity  GeneralAdvancedTechniques.unity  GeneralBasic.unity  GeneralBasics2d.unity  GeneralCameraShake.unity  GeneralEasingTypes.unity  GeneralEvents.unity  GeneralSequencer.unity  GeneralSimpleUi.unity  LogoCinematic.unity  PathBezier.unity  PathBezier2d.unity  PathSpline2d.unity  PathSplineEndless.unity  PathSplinePerformance.unity  PathSplineTrack.unity  PathSplines.unity  TestingUnitTests.unity  TestingZLegacy.unity
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: Data.cs  Extensions.cs  Image.cs  Load.cs  Main.cs  Menu.cs  ProgressBar.cs  Transition.cs  UI.cs  material.mat
Assets/Shaders/: ComputeShader.compute  ComputeShaderScript.cs  FinishedShader.compute  GenerateShader.compute  GenerateShaderPreview.compute  TextShader.compute  imageMat.mat  imageMat.shader  textShader.compute
Assets/TextMesh Pro/: OpenSans SDF.asset
Generate/: CMakeLists.txt  README.md  batchClear.py  batchStart.py  decode  decode.cpp  enemy1.json  enemy2.json  main.cpp  pixelArt  test.json
Generate/old/: old.cpp
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
